# WiDs

./: .gitignore  README.md  SETTINGS.json  directory_structure.txt  pyproject.toml  requirements.txt
catboost_info/: catboost_training.json  learn_error.tsv  time_left.tsv
catboost_info/learn/: events.out.tfevents
data/: train.csv  val.csv
src/EDA/: dataAnalysis.ipynb  dataCleaing.ipynb  targetAnalysis.ipynb
src/Modeling/: baseline.ipynb  cv.ipynb  cv2.ipynb  cv3.ipynb  model1.ipynb  model2.ipynb  model3.ipynb  stack_bundle.joblib  testing.ipynb
src/Modeling/catboost_info/: catboost_training.json  learn_error.tsv  time_left.tsv
src/Modeling/catboost_info/learn/: events.out.tfevents
src/ReproducibilityCheck/: check_reproducibility.py  generated_submission.csv  reproducibilityCheck.ipynb
src/Submission/: submit.ipynb  submit.py
src/Submission/catboost_info/: catboost_training.json  time_left.tsv
src/Submission/catboost_info/learn/: events.out.tfevents
src/models/: stack_bundle.joblib
src/utils/: metric.py
