[project]
name = "wids"
version = "0.1.0"
description = "Project for WiDs Kaggle Competition"
readme = "README.md"
requires-python = ">=3.11"

dependencies = [
    "catboost>=1.2.10",
    "kaggle>=2.0.0",
    "lifelines>=0.30.0",
    "lightgbm>=4.6.0",
    "matplotlib>=3.10.8",
    "pandas>=3.0.1",
    "scikit-learn>=1.8.0",
    "scikit-survival>=0.27.0",
    "seaborn>=0.13.2",
    "xgboost>=3.2.0",
]

[tool.setuptools.packages.find]
where = ["src"]
